minor edits to text
fixed an error in sentence that should say all classification studies were published in engineering journals

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -104,9 +104,9 @@ Recent studies have sought to enhance emotion prediction by identifying more rel
 
 <!--This paragraph now is somewhat inconsistent with the analyses we actually perform motivating the journal/feature N/model discussion-->
 
-Our aim is to evaluate the predictive accuracy of two types emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modelling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years, focusing on subgroup analyses capturing these differences (model type, feature N, journal type). Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model [@yang2018review]. \
+Our aim is to evaluate the predictive accuracy of two types emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modelling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years, focusing on subgroup analyses capturing these differences (model type, feature N, journal type). Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model [@yang2018review].\
 <!-- yang et al. attribute this to fewer salient features, and individual differences, which I think is consistent with these descriptions -->\
-In terms of the modelling techniques and the number of features, a reasonable hypothesis is that advanced techniques (e.g., neural networks) and larger amount of features will lead to higher prediction rates than conventional techniques (e.g., logistic regression or linear regression) and smaller feature sets. However, this relationship might not be as straightforward as this due to the demands complex models place on dataset size \[@alwosheel2018; @sun2017revisiting\].
+In terms of the modelling techniques and the number of features, a reasonable hypothesis is that advanced techniques (e.g., neural networks) and larger amount of features will lead to higher prediction rates than conventional techniques (e.g., logistic regression or linear regression) and smaller feature sets. However, this relationship might not be as straightforward as this due to the demands complex models place on dataset size [@alwosheel2018; @sun2017revisiting].
 
 <!-- incorporate splits into above? -->
 
@@ -143,7 +143,7 @@ First we describe the overall pattern of data (regression vs. classification, mo
 TABLE 1: Summary of data
 
 |   | Regression | Classification | Total |
-|:-------------|:----------------------|:--------------------|:-------------|
+|:---------------|:--------------------|:------------------|:---------------|
 | Study N | 22 | 12 | 34 |
 | Model N | 204 | 86 | 290 |
 | Techniques | Neural Nets (NN): 64 | 21 | 85 |
@@ -221,8 +221,7 @@ We also ran the sub-grouping analyses across stimulus genres (single vs mixed), 
 
 <!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
 
-These comparisons of sub-groupings may also be influenced by other factors, such as the aim of the study (i.e. whether it focused on prediction or explanation). To address this, we used the type of journal in which each study was published as a proxy indicator, classifying journals as either psychology or engineering. Of the 22 regression studies, 13 were published in engineering journals, yielding an average correlation of *r* = 0.656 (9% CI: 0.505–0.769). Studies published in psychology journals (9) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of study aims, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies.
-<!-- numbers in the text updated up to here, CA 20/2/2025 -->
+These comparisons of sub-groupings may also be influenced by other factors, such as the aim of the study (i.e. whether it focused on prediction or explanation). To address this, we used the type of journal in which each study was published as a proxy indicator, classifying journals as either psychology or engineering. Of the 22 regression studies, 13 were published in engineering journals, yielding an average correlation of *r* = 0.656 (9% CI: 0.505–0.769). Studies published in psychology journals (9) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of study aims, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies. <!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 <!-- DISCUSS: we don't report journal type of explain/predict differences, although we do some of these in arousal, TE 19/3/2025: Now added! -->
 
@@ -232,7 +231,7 @@ Moving on the arousal, we carry out the same meta-analytical analysis applying t
 
 #### Quantifying study heterogeneity
 
-However, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95%CI -4.87-6.45, *t* = 0.273, *p* = 0.788). If we remove the studies that are outside the 95%CI in heterogeneity, leaves this 13 studies in the summary that has *r* = 0.826 (95%CI 0.806-0.845) with $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, no material difference to the results obtained with all 22 studies.
+For arousal, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95%CI -4.87-6.45, *t* = 0.273, *p* = 0.788). If we remove the studies that are outside the 95%CI in heterogeneity, this leaves 13 studies in the summary where *r* = 0.826 (95%CI 0.806-0.845), $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, we observed no material difference to the results obtained with all 22 studies.
 
 Table 3. Meta-analytic diagnostic for all regression studies predicting arousal from audio.
 
@@ -266,7 +265,7 @@ Figure 3 presents a forest plot of the random-effects model of the best-performi
 
 #### Reporting splits
 
-The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, does show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other sub-groupings were explored, such as the type of journal (Engineering with 13 studies vs Psychology with 9 studies), no significant differences were observed (*Q*(1) = 0.94, *p* = .333).
+The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other sub-groupings were explored, such as the type of journal (Engineering with 13 studies vs Psychology with 9 studies), no significant differences were observed (*Q*(1) = 0.94, *p* = .333).
 
 {{< include _figure3.qmd >}}
 
@@ -301,17 +300,17 @@ Table 4. Meta-analytic diagnostic for all classification studies predicting emot
 
 ### Quantifying study heterogeneity
 
-Accounting for outliers among the classifications results removes 6 studies, affecting both performance ($MCC$ = 0.8941, 95%CI: 0.8282-0.9356) and heterogeneity scores ($\tau^2$ = 0.0569, $I^2$ = 97.7%). However, Eggers' test does not indicate an asymmetric funnel plot ($\beta$ = -19.769, 95%CI: -39.29--0.24). After aggregating across dimensions, some of the best models included only classified arousal [@zhang2016br; @zhang2017fe]. To assess these studies' impact on overall performance, we conducted the same meta-analytic procedure after excluding them. Classification accuracy ($MCC$ = 0.8758, 95%CI: 0.7235-0.9468) does not change notably, nor does the rank order of model classes in terms of performance. Consequently, we report on all 12 in subsequent analyses.
+Accounting for outliers among the classifications results removes 6 studies, affecting both performance ($MCC$ = 0.8941, 95%CI: 0.8282-0.9356) and heterogeneity scores ($\tau^2$ = 0.0569, $I^2$ = 97.7%). However, we observed no significant issues in analysis for asymmetry ($\beta$ = -19.769, 95%CI: -39.29--0.24). After aggregating across dimensions, some of the best models included only classified arousal [@zhang2016br; @zhang2017fe]. To assess these studies' impact on overall performance, we conducted the same meta-analytic procedure after excluding them. Classification accuracy ($MCC$ = 0.8758, 95%CI: 0.7235-0.9468) does not change notably, nor does the rank order of model classes in terms of performance. Consequently, we report on all 12 in subsequent analyses.
 
 ### Reporting splits
 
-The number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) analyzed does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s showing average differences according to the number of features (\< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; \>300 F: $MCC$ = 0.7754). Similarly, the class of model did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) despite neural networks attaining highest average performance ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Finally, neither single- vs. multigenre studies (*Q*(1) = 0.12, *p* = 0.7324), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.8694) differed significantly. Unlike regression, no classification studies were published in engineering journals.
+The number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) analyzed does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s showing average differences according to the number of features (\< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; \>300 F: $MCC$ = 0.7754). Similarly, the class of model did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) despite neural networks attaining highest average performance ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Finally, neither single- vs. multigenre studies (*Q*(1) = 0.12, *p* = 0.7324), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.8694) differed significantly. All classification studies were published in engineering journals.
 
 ### Model success across concepts, model types and feature counts
 
 <!-- Changed the header slightly, TE 19/3/2025-->
 
-To assess how the use of different model types affected performance, we prepared heatmap visualizations depicting differences in success across feature *n* categories and algorithms. We collapsed SVM and Tree-Based categories due to their low representation in the model summary. Figure 5 summarizes differences in success (a) across categories, as well as (b) the algorithms in each model class. Overall, studies using smaller feature sets tend to perform best, whereas the best model type largely depends on the nature of the prediction task. For valence and arousal, linear models perform better than other model types, whereas for emotion classification, neural networks show the best overall performance. The overall pattern aligns with the analyses of the splits reported earlier concerning model types and feature counts, but the visualization also highlights concurrent information about the feature n, model types, study counts, and the average number of stimuli within each combination. For instance, studies with the lowest number of features (<30) also tend to have the highest mean number of stimuli (M = 749.5), while the poorest-performing feature count range (30–300) corresponds to the lowest mean number of stimuli (M = 522.5). It is also reassuring to observe that studies utilizing neural networks and other model types tend to use a higher number of features and stimuli than those employing linear models, as this reflects the capabilities and internal training requirements built into these models.
+To assess how the use of different model types affected performance, we prepared heatmap visualizations depicting differences in success across feature *n* categories and algorithms. We collapsed SVM and Tree-Based categories due to their low representation in the model summary. Figure 5 summarizes differences in success (a) across categories, as well as (b) the algorithms in each model class. Overall, studies using smaller feature sets tend to perform best, whereas the best model type largely depends on the nature of the prediction task. For valence and arousal, linear models perform better than other model types, whereas for emotion classification, neural networks show the best overall performance. The overall pattern aligns with the analyses of the splits reported earlier concerning model types and feature counts, but the visualization also highlights concurrent information about the feature n, model types, study counts, and the average number of stimuli within each combination. For instance, studies with the lowest number of features (\<30) also tend to have the highest mean number of stimuli (M = 749.5), while the poorest-performing feature count range (30–300) corresponds to the lowest mean number of stimuli (M = 522.5). It is also reassuring to observe that studies utilizing neural networks and other model types tend to use a higher number of features and stimuli than those employing linear models, as this reflects the capabilities and internal training requirements built into these models.
 
 <!-- DISCUSS the interpretation above -->
 
@@ -353,7 +352,6 @@ Second, there is no single modelling technique that seems to arise on top, altho
 Third, there is little work on the relevance of the features and how these impact the accuracy of the models. Unfortunately, in many cases, it is impossible to attribute the sources of error to features (as opposed to target emotions obtained from participants or from the modelling architecture, cross-validation, or the size of data), as the studies so far have not compared the feature sets systematically, nor has a comparison of the datasets with identical features has been carried out [@panda2020audio]. In the future, it would be advantageous to systematically assess these sources of error in MER studies to allow us to focus on where and how significant improvements can be made.
 
 <!-- Added at least a reference to Pandas work on survey of features to para above -->
-
 
 ```{=html}
 <!-- Question to @Cameron: We are a bit coy here as we don't really mention the tools by name (e.g. MIR toolbox, psysound, essentia, librosa, etc.). We have the information and should we write about them? Another gem to the supporting information as the space does not allow expansion. 
