add intro section on explanatory and predictive frameworks

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -79,7 +79,11 @@ MER studies apply regression and classification techniques to predict emotion in
 
 Large datasets are needed to generalize predictions across diverse samples, especially for deep learning and complex machine-learning models that require extensive pre-training. However, the dataset sizes in MER tend to be modest in comparison, as direct annotation of music examples is resource-intensive. In contrast, datasets in the visual domain are often significantly larger (e.g., *EmoSet* with 118,102 images and *AffectNet* with 450,000, see @yang2023emoset;@mollahosseini2017affectnet). Some efforts have been made to scale up MER datasets by inferring emotions from tags (*MTG-Jamendo* with 18,486 excerpts @bogdanov2019mtg and *Music4all* with 109,269 excerpts @santana2020), but these have not found their way into standard emotion prediction or classification tasks yet.
 
-Although training MER systems with a wide range of stimuli and features can be useful for generalizable and accurate modelling, smaller datasets can be more appropriate in studies requiring precise control over stimulus parameters. For example, @griffiths2021am tested multi-genre MER using multiple linear regression to predict emotion in 20 tracks from different genres (validating the model using a separate set of 40 tracks). @saizclar2022pr evaluated how 22 variables derived from an onset curves (changes in the energy of a note starting from its onset) can be used to predict valence and activation in 40 short (8-12s) piano excerpts. Smaller datasets are also useful in studies attempting to explain how stimulus qualities such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in] affect ratings of valence and arousal. Although predictive modelling is not always an explicit goal of these studies, they can be adapted to fit into a MER framework. For example, @chowdhury2021perceived adopted data from a previous psychological study of piano performances to compare sets of features analyzed from audio files, musical scores, or deep neural network feature extractors.
+Although training MER systems with a wide range of stimuli and features can be useful for generalizable modelling, smaller datasets can be more appropriate when greater control over stimuli or features is necessary. For example, @griffiths2021am conducted a study aiming to isolate features optimally predictive for evaluating emotion ratings of music from different genres. Using multiple linear regression, he predicted emotion in 20 tracks from different genres, and validated the model using a separate set of 40 tracks. By preparing the model for a specific predictive context, the study surpassed the performance accuracy of previous benchmark models. In another study, @saizclar2022pr evaluated novel audio-based features in a predictive context, extracting 22 variables derived from onset curves -- changes in the energy of a note starting from its onset -- to predict valence and activation in 40 short (8-12s) piano excerpts. These carefully-designed experiments evaluate specific questions, informing researchers about how models can be designed to perform accurately in diverse prediction tasks. 
+
+Small, carefully-curated, datasets are also useful when attempting to *explain* how musical factors such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in], affect variance in emotion ratings. Psychological studies apply similar data collection and modelling procedures to the predictive MER studies summarized above. However, statistical models serve a distinct purpose. Instead of predicting emotion labels for new music, psychological studies on music emotion test causal theories about the relationship between musical predictors and emotion labels. Accurate modelling requires rigorous control of musical parameters and data collection procedures. 
+
+The distinction between predictive and explanatory modelling frameworks is important, as it affects decisions about data curation and modelling, as well the predictive and explanatory power of models [@shmueli2010explain]. However, the interdisciplinary nature of MER means these frameworks can be applied in complementary ways. Emotion constructs applied in predictive MER studies often originate from experimental psychology, such as Russell's circumplex model [@Russell1980] and Hevner's adjective circle [@hevner1936]. Data collected through psychology experiments can also be applied in predictive contexts. For example, @chowdhury2021perceived used data from a previous psychological study of piano performances [@battcock2019ac] as a reference standard when comparing predictive accuracy of feature sets analyzed from audio files, musical scores, or deep neural network feature extractors. Insights from theoretical studies can inform predictive applications as scholars attempt to surpass existing benchmarks for predictive accuracy. 
 
 ## The current benchmarks of MER
 
