--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -6,7 +6,32 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{battcock2019ac,
+  title={Acoustically expressing affect},
+  author={Battcock, Aimee and Schutz, Michael},
+  journal={Music Perception: An Interdisciplinary Journal},
+  volume={37},
+  number={1},
+  pages={66--91},
+  year={2019}}
 
+@article{shmueli2010explain,
+  title={To Explain or to Predict?},
+  author={Shmueli, Galit},
+  journal={Statistical Science},
+  volume={25},
+  number={3},
+  pages={289--310},
+  year={2010}}
+
+@article{hevner1936,
+  title={Experimental studies of the elements of expression in music},
+  author={Hevner, Kate},
+  journal={The American journal of psychology},
+  volume={48},
+  number={2},
+  pages={246--268},
+  year={1936}}
 
 @book{yang2011,
 	address = {Boca Raton, US},
